<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.axial.spring.modules</groupId>
    <artifactId>openapi-manager-legacy</artifactId>
    <version>0.0.1</version>

    <name>openapi-manager-legacy</name>
    <description>Axial Spring Boot Openapi Manager Legacy</description>

    <packaging>jar</packaging>

    <properties>

        <java.version>8</java.version>

        <!-- Maven Dependencies -->
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>

        <!-- Spring Dependencies -->
        <spring-boot-starter.version>2.7.7</spring-boot-starter.version>

        <!-- Swagger 3 / Open API Dependencies  -->
        <springdoc.version>1.6.14</springdoc.version>

    </properties>

    <dependencies>

        <!-- Spring Dependencies -->
        <!-- Core starter, including auto-configuration support, logging and YAML -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>${spring-boot-starter.version}</version>
        </dependency>

        <!-- Swagger 3 / Open API Dependencies  -->
        <!-- SpringDoc OpenAPI UI -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- The Compiler Plugin is used to compile the sources of your project. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <!-- Java Version -->
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- Builds a Java Archive (JAR) file from the compiled project classes and resources. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
            </plugin>

        </plugins>
    </build>

</project>
